@@ -5,6 +5,9 @@ import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.Enumeration;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 import DatabaseInterfaces.IFactory;
 import DatabaseInterfaces.iDAO2;
@@ -13,20 +16,34 @@ import RelationalDatabase.RelationalDAO;
 
 public class MongoFactory implements IFactory {
 	
-	private MongoDAO mongoDAO; //TODO: change to dynamic for pass off
+	private iDAO2 mongoDAO; 
 
 	@Override
 	public Boolean startTransaction() {
 		try {
 			
-			File file = new File("assets/mongo");
-			URL url = file.toURI().toURL();
+			JarFile jarFile = new JarFile("assets/mongo.jar"); //Gets the jar
+			Enumeration<JarEntry> e = jarFile.entries(); //Gets all the things inside the jar
+
+			URL[] urls = { new URL("jar:file:" + "assets/mongo.jar" + "!/") };
+			URLClassLoader cl = URLClassLoader.newInstance(urls);
 			
-			URLClassLoader classLoader = (URLClassLoader)ClassLoader.getSystemClassLoader();
-			Method method = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
-			method.setAccessible(true);
-			method.invoke(classLoader, url);
-			
+			while (e.hasMoreElements()) { //Runs the loop
+			    JarEntry je = e.nextElement();
+			    if(je.isDirectory() || !je.getName().endsWith(".class")){
+			        continue; //If there's nothing that ends with .class, just go to the next element
+			    }
+			    // -6 because of .class
+			    String className = je.getName().substring(0,je.getName().length()-6);
+			    className = className.replace('/', '.');
+			    Class c = cl.loadClass(className);
+			    if (className.equals("MongoDatabase.MongoDAO")) { //If it finds the DAO class,
+			    	Object object = c.newInstance(); //Get the class and cast it to an object
+			    	iDAO2 holder = (iDAO2)object; //Cast to a DAO interface object
+			    	mongoDAO = holder.initDAO(); //call the interface method that creates a new DAO class
+			    }
+			}
+						
 			return true;
 		} catch (Exception e) {
 			e.printStackTrace();
